src/test/deca/syntax/invalid/created/test_sans_objet_tout_mal_ordonne.deca
{
    // Calcul de factorielle
    int n = readInt();
    int result = 1;
    int i = 1;
    
    while (i <= n) {
        result = result * i;
        i = i + 1;
    }
    
    //println("Factorielle de ", n, " = ", result);
    
    // Calcul de moyenne
    float sum = 0.0;
    int count = 0;
    boolean continuer = true;
    
    while (continuer && count < 10) {
        print("Entrez un nombre (0 pour arrêter): ");
        //float val = readFloat();
        
        if (val == 0.0) {
            continuer = false;
        } else {
            sum = sum + val;
            count = count + 1;
        }
    }
    
    if (count > 0) {
        //float moyenne = sum / count;
        println("Moyenne: ", moyenne);
    }
}